# clicks

./: .gitignore  README.md  clicks-ui.xml  gradle.properties  settings.gradle.kts  teclas_device_prefs.xml
.github/workflows/: android-build.yml  retrain-swipe.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro  teclas-debug.keystore
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
checkpoints/: before-music-theme-split-music-black-2026-07-01.patch  before-now-playing-theme-music2black-2026-07-01.patch
docs/: ALGORITHM.md  README.md  TODO-launcher-suggestion-strip.md  foldable-inner-focus-canvas-prototype.html  release-readiness.md
docs/hardening/: codex-hardening-prompt.md
docs/keyboard-swap/: codex-build-prompt.md  prototype.html
docs/neumorphic-redesign/: codex-build-prompt.md  design-spec.md  prototype-all-screens.html  prototype-home-full-stack.html  prototype-music.html  prototype-real-vs-redesign.html  prototype-widget-search.html  round2-polish-prompt.md
docs/play-store/: STORE-LISTING.md  first-run.html  presentation.html  pro.html  prototype.html
docs/search/: codex-build-prompt.md  design-spec.md  prototype-docked-vs-widget.html  prototype-docked.html  prototype-universal-search.html  prototype-widget-slide.html
gradle/: libs.versions.toml
logs/: honor-display-ids.txt  honor-teclas-logcat.txt  honor-window.xml
server/gemini-proxy/: README.md  package.json  wrangler.toml
tools/lm/: build_bigrams.py  train_nextword.py
tools/neural_swipe/: README.md  evaluate.py  export_seq2seq.py  futo_data.py  layout.py  synth.py  (+3 more)
(+409 files in other folders)
